--- a/3º Trabalho/3º Trabalho.tex
+++ b/3º Trabalho/3º Trabalho.tex
@@ -62,24 +62,8 @@ Antes de começar nossa análise vamos definir o termo precisão, bem como dar u
 
 Note que a precisão é definida como o recíproco da variância, uma medida de dispersão dos dados. Assim, se possuímos uma variância baixa afirmar ver que os valores tenderam a estarem próximos da média da distribuição. Já se a variância é alta os valores poderão estar mais espalhados ao redor da média, como ilustrado na figura \ref{gaussianas}.
 \begin{figure}[H]
-    \begin{tikzpicture}
-        \begin{axis}[no markers, domain = 0:10, samples = 100, height = 5 cm, width = 8 cm, enlargelimits = upper, axis on top]
-            \addplot [fill = cyan!20, draw = none, domain = -3:3] {gauss(0,1)} \closedcycle;
-            \addplot [fill = orange!20, draw = none, domain = -3:-2] {gauss(0,1)} \closedcycle;
-            \addplot [fill = orange!20, draw = none, domain = 2:3] {gauss(0,1)} \closedcycle;
-            \addplot [fill = blue!20, draw = none, domain = -2:-1] {gauss(0,1)} \closedcycle;
-            \addplot [fill = blue!20, draw = none, domain = 1:2] {gauss(0,1)} \closedcycle;
-        \end{axis}
-    \end{tikzpicture}
-    \begin{tikzpicture}
-        \begin{axis}[no markers, domain = 0:10, samples = 100, height = 5 cm, width = 8 cm, enlargelimits = upper, axis on top]
-            \addplot [fill = cyan!20, draw = none, domain = -6:6] {gauss(0,2)} \closedcycle;
-            \addplot [fill = orange!20, draw = none, domain = -6:-4] {gauss(0,2)} \closedcycle;
-            \addplot [fill = orange!20, draw = none, domain = 4:6] {gauss(0,2)} \closedcycle;
-            \addplot [fill = blue!20, draw = none, domain = -4:-2] {gauss(0,2)} \closedcycle;
-            \addplot [fill = blue!20, draw = none, domain = 2:4] {gauss(0,2)} \closedcycle;
-        \end{axis}
-    \end{tikzpicture}
+    \includegraphics[page = 1]{3º Trabalho/Tikz1.pdf}
+    \includegraphics[page = 2]{3º Trabalho/Tikz1.pdf}
     \caption{à esquerda temos a plotagem de uma $\mathcal{N}(0, 1^2)$, já à direita a plotagem de uma $\mathcal{N}(0, 2^2)$.}
     \label{gaussianas}
 \end{figure}
@@ -433,115 +417,23 @@ Por fim, no caso em que $\frac{\beta_0^2}{\alpha_0} = \frac{1}{10}$, temos:
 
 \noindent e o intervalo de confiança resultante é o intervalo $(7.940037725332982, 8.68511705725481)$.
 
-\begin{comment}
-    % Agora, precisamos apenas verificar quais são os hiperparâmetros para nossa priori. Note que Palmirinha suspeita que a concentração de amido está em torno de $10$ mg/L, ou seja, podemos tomar $\mu_0 = 10$. De forma similar a que DeGroot fez em seu exemplo 8.6.3 \cite{degroot}, vamos dividir a variância amostral entre $\mu$ e $\tau$, dessa forma
-    % \[Var(\mu) = \dfrac{\overline{s}_n^2}{2} = 3.965226 \text{ e } E[\tau] = \dfrac{1}{\frac{\overline{s}_n^2}{2}} = \dfrac{1}{3.965226}.\]
-    
-    % Palmirinha também suspeita que o coeficiente de variação da concentração de amido fique em torno de $\frac{1}{2}$, mas note que, em termos de precisão, temos
-    % \[\operatorname{cv} = \dfrac{\sigma}{\mu} = \dfrac{1}{\mu \sqrt{\tau}},\]
-    
-    % \noindent assim, tomando o valor esperado das prioris de $\mu$ e $\tau$, obtemos
-    % \[\operatorname{cv} = \dfrac{1}{\mu_0 \sqrt{\frac{\alpha_0}{\beta_0}}}, \text{ com } \alpha_0 > 1.\]
-    
-    % A condição $\alpha_0 > 1$ é dada para que possamos utilizar o teorema 8.6.3 do DeGroot \cite{degroot}, o qual afirma que
-    % \[Var(\mu) = \dfrac{\beta_0}{\lambda_0 \left(\alpha_0 - 1\right)} \implies \lambda_0 = \dfrac{\beta_0}{Var(\mu) \left(\alpha_0 - 1\right)}.\]
-    
-    % Tomando $\alpha_0 = 2$ podemos encontrar $\beta_0$:
-    % \begin{equation*}
-    %     \begin{split}
-    %         \dfrac{1}{2} & = \dfrac{1}{\mu_0 \sqrt{\frac{\alpha_0}{\beta_0}}} \\
-    %         2 & = 10 \sqrt{\frac{2}{\beta_0}} \\
-    %         \dfrac{1}{5} & = \sqrt{\frac{2}{\beta_0}} \\
-    %         \dfrac{1}{25} & = \dfrac{2}{\beta_0} \\
-    %         \beta_0 & = 50.
-    %     \end{split}
-    % \end{equation*}
-    
-    % Agora, podemos encontrar $\lambda_0$:
-    % \begin{equation*}
-    %     \begin{split}
-    %         \lambda_0 & = \dfrac{50}{3.965226 \left(2 - 1\right)} \\
-    %         & = \dfrac{50}{3.965226}.
-    %     \end{split}
-    % \end{equation*}
-    
-    % Agora, com todos os hiperparâmetros em mãos, podemos fazer o cálculo da posteriori, ou seja, atualizar os hiperparâmetros. Assim, temos
-    % \begin{equation*}
-    %     \begin{split}
-    %         \lambda_1 & = \dfrac{50}{3.965226} + 10 \approx 22.609622 \\
-    %         \mu_1 & = \dfrac{\dfrac{50}{3.965226}\cdot 10 + 10\cdot 8.307849}{10 + \dfrac{50}{3.965226}} \approx 9.251579 \\
-    %         \alpha_1 & = 2 + \dfrac{10}{2} = 7 \\
-    %         \beta_1 & = 50 + \dfrac{7.930452}{2} + \dfrac{10\cdot \dfrac{50}{3.965226}\left(8.307849 - 10\right)^2}{2\left(\dfrac{50}{3.965226} + 10\right)} \approx 61.949896.
-    %     \end{split}
-    % \end{equation*}
-    
-    % Assim, utilizando o último dos resultados acima, temos que
-    % \[\mu \sim X = 9.251579 + \left(\dfrac{61.949896}{7\cdot 22.609622}\right)^{\frac{1}{2}}T,\]
-    
-    % \noindent onde $T$ tem distribuição $t$ de Student com $14$ graus de liberdade.
-    
-    % Assim, utilizando tabelas da distribuição $t$ de Student, podemos ver que o local onde a distribuição deixa probabilidade $0.025$ à direita é o ponto $2.145$, dessa forma, temos que
-    % \[P\left(9.251579 + \left(\dfrac{61.949896}{7\cdot 22.609622}\right)^{\frac{1}{2}}\cdot (-2.145) < \mu < 9.251579 + \left(\dfrac{61.949896}{7\cdot 22.609622}\right)^{\frac{1}{2}}\cdot 2.145\right) = 0.95,\]
-    
-    % \noindent ou seja,
-    % \[P\left(7.909581 < \mu < 10.59358\right) = 0.95.\]
-    
-    % Logo, $a = 7.909581$ e $b = 10.59358$.
-\end{comment}
-
 Podemos ver essas distribuições de $\mu$ graficamente. Em ciano temos as distribuições a priori, já em azul é a posteriori e, em vermelho, o intervalo de confiança. Assim, temos as seguintes distribuições:
 
 \begin{multicols}{2}
     \begin{figure}[H]
-        \begin{tikzpicture}
-            \begin{axis}[domain = 5:15, samples = 100, height = 5 cm, width = 8 cm, enlargelimits = upper]
-                \addplot [domain = 5:7.824678461062495, draw = black] {student(18, 8.321955338966417, 0.05602432825188678)} \closedcycle;
-                \addplot [domain = 8.819232216870338:15, draw = black] {student(18, 8.321955338966417, 0.05602432825188678)} \closedcycle;
-                \addplot [domain = 7.824678461062495:8.819232216870338, draw = black] {student(18, 8.321955338966417, 0.05602432825188678)} \closedcycle;
-                \addplot [draw = blue] {student(18, 8.321955338966417, 0.05602432825188678)};
-                \addplot [draw = cyan] {student(8, 10, 2.9739195)};
-                \addplot [domain = 7.824678461062495:8.819232216870338, draw = red, samples = 2, line width=0.1cm] {0};
-            \end{axis}
-        \end{tikzpicture}
+        \includegraphics[page = 1]{3º Trabalho/Tikz2.pdf}
         \caption{Caso em que $\frac{\beta_0^2}{\alpha_0} = \frac{1}{4}$.}
     \end{figure}
     \begin{figure}[H]
-        \begin{tikzpicture}
-            \begin{axis}[domain = 5:15, samples = 100, height = 5 cm, width = 8 cm, enlargelimits = upper]
-                \addplot [domain = 5:8.05203362327982, draw = black] {student(18, 8.321955338966417, 0.016583422131153235)} \closedcycle;
-                \addplot [domain = 8.567216874423854:15, draw = black] {student(18, 8.321955338966417, 0.016583422131153235)} \closedcycle;
-                \addplot [domain = 8.05203362327982:8.567216874423854, draw = black] {student(18, 8.321955338966417, 0.016583422131153235)} \closedcycle;
-                \addplot [draw = blue] {student(18, 8.321955338966417, 0.016583422131153235)};
-                \addplot [draw = cyan] {student(8, 10, 3.8066169600000004)};
-                \addplot [domain = 8.05203362327982:8.567216874423854, draw = red, samples = 2, line width=0.1cm] {0};
-            \end{axis}
-        \end{tikzpicture}
+        \includegraphics[page = 2]{3º Trabalho/Tikz2.pdf}
         \caption{Caso em que $\frac{\beta_0^2}{\alpha_0} = \frac{1}{25}$.}
     \end{figure}
     \begin{figure}[H]
-        \begin{tikzpicture}
-            \begin{axis}[domain = 5:15, samples = 100, height = 5 cm, width = 8 cm, enlargelimits = upper]
-                \addplot [domain = 5:8.176218214379208, draw = black] {student(18, 8.321955338966417, 0.004562815253362879)} \closedcycle;
-                \addplot [domain = 8.441787865313305:15, draw = black] {student(18, 8.321955338966417, 0.004562815253362879)} \closedcycle;
-                \addplot [domain = 8.176218214379208:8.441787865313305, draw = black] {student(18, 8.321955338966417, 0.004562815253362879)} \closedcycle;
-                \addplot [draw = blue] {student(18, 8.321955338966417, 0.004562815253362879)};
-                \addplot [draw = cyan] {student(8, 10, 3.9453998699999997)};
-                \addplot [domain = 8.176218214379208:8.441787865313305, draw = red, samples = 2, line width=0.1cm] {0};
-            \end{axis}
-        \end{tikzpicture}
+        \includegraphics[page = 1]{3º Trabalho/Tikz3.pdf}
         \caption{Caso em que $\frac{\beta_0^2}{\alpha_0} = \frac{29}{200}$.}
     \end{figure}
     \begin{figure}[H]
-        \begin{tikzpicture}
-            \begin{axis}[domain = 5:15, samples = 100, height = 5 cm, width = 8 cm, enlargelimits = upper]
-                \addplot [domain = 5:7.940037725332982, draw = black] {student(18, 8.321955338966417, 0.033274970669927795)} \closedcycle;
-                \addplot [domain = 8.68511705725481:15, draw = black] {student(18, 8.321955338966417, 0.033274970669927795)} \closedcycle;
-                \addplot [domain = 7.940037725332982:8.68511705725481, draw = black] {student(18, 8.321955338966417, 0.033274970669927795)} \closedcycle;
-                \addplot [draw = blue] {student(18, 8.321955338966417, 0.033274970669927795)};
-                \addplot [draw = cyan] {student(8, 10, 3.5687034)};
-                \addplot [domain = 7.940037725332982:8.68511705725481, draw = red, samples = 2, line width=0.1cm] {0};
-            \end{axis}
-        \end{tikzpicture}
+        \includegraphics[page = 2]{3º Trabalho/Tikz3.pdf}
         \caption{Caso em que $\frac{\beta_0^2}{\alpha_0} = \frac{1}{10}$.}
     \end{figure}
 \end{multicols}
@@ -554,7 +446,7 @@ Já no início pudemos ter uma boa ideia do significado da precisão, sendo visu
 
 Chegando no exemplo vimos que a escolha da priori tem certa relevância no cálculo da posteriori, embora os intervalos de confiança que foram geram ficaram próximos. Ou seja, a priori pode ser gerada de diversas formas, a depender da interpretação de quem vai elaborá-la, mas a posteriori será similar, mesmo com prioris diferentes.
 
-Por fim, talvez seria interessante alguém falar com Palmirinha para que ela encontre um assistente menos guloso e, principalmente, guardar seus parâmetros de priori.
+Por fim, talvez seria interessante alguém falar com Palmirinha para ela buscar um assistente menos guloso e, principalmente, guardar seus parâmetros de priori em um quadrinho ao lado do quadro com o $\operatorname{cv}$.
 
 \printbibliography
 
